add: main section

--- a/template.html
+++ b/template.html
@@ -3,13 +3,55 @@
 <head>
     <meta charset="utf-8"/>
     <title>template HTML5</title>
+    <link rel="stylesheet" media="screen" href="template.css" />
 </head>
 
 <body>
-<header>
-    <h1>Test titre</h1>
-</header>
+    <nav>
+        <ul>
+            <li>Expériences</li>
+            <li>Compétences</li>
+            <li>Formations</li>
+            <li>Portfolio</li>
+        </ul>
+    </nav>
+
+<section id="identity">
+    <div id="photo" class="flottant">photo</div>
+    <div id="perso" class="flottant">
+        <ul>
+            <li>Ugo Bourdon</li>
+            <li>bourdon.ugo@gmail.com</li>
+            <li>https://github.com/ubourdon</li>
+        </ul>
+    </div>
+</section>
+
+<section id="main">
+    fsdmlk sdmlkf qsdfmlùk qmsldkf qùlfk qsùdlkf qùsflk fsdmlk sdmlkf qsdfmlùk qmsldkf qùlfk qsùdlkf qùsflk
+    fsdmlk sdmlkf qsdfmlùk qmsldkf qùlfk qsùdlkf qùsflk fsdmlk sdmlkf qsdfmlùk qmsldkf qùlfk qsùdlkf qùsflk
+    fsdmlk sdmlkf qsdfmlùk qmsldkf qùlfk qsùdlkf qùsflk fsdmlk sdmlkf qsdfmlùk qmsldkf qùlfk qsùdlkf qùsflk
+    fsdmlk sdmlkf qsdfmlùk qmsldkf qùlfk qsùdlkf qùsflk fsdmlk sdmlkf qsdfmlùk qmsldkf qùlfk qsùdlkf qùsflk
+    fsdmlk sdmlkf qsdfmlùk qmsldkf qùlfk qsùdlkf qùsflk fsdmlk sdmlkf qsdfmlùk qmsldkf qùlfk qsùdlkf qùsflk
+    fsdmlk sdmlkf qsdfmlùk qmsldkf qùlfk qsùdlkf qùsflk fsdmlk sdmlkf qsdfmlùk qmsldkf qùlfk qsùdlkf qùsflk
+    fsdmlk sdmlkf qsdfmlùk qmsldkf qùlfk qsùdlkf qùsflk fsdmlk sdmlkf qsdfmlùk qmsldkf qùlfk qsùdlkf qùsflk
+    fsdmlk sdmlkf qsdfmlùk qmsldkf qùlfk qsùdlkf qùsflk fsdmlk sdmlkf qsdfmlùk qmsldkf qùlfk qsùdlkf qùsflk
+    fsdmlk sdmlkf qsdfmlùk qmsldkf qùlfk qsùdlkf qùsflk fsdmlk sdmlkf qsdfmlùk qmsldkf qùlfk qsùdlkf qùsflk
+    fsdmlk sdmlkf qsdfmlùk qmsldkf qùlfk qsùdlkf qùsflk fsdmlk sdmlkf qsdfmlùk qmsldkf qùlfk qsùdlkf qùsflk
+    fsdmlk sdmlkf qsdfmlùk qmsldkf qùlfk qsùdlkf qùsflk fsdmlk sdmlkf qsdfmlùk qmsldkf qùlfk qsùdlkf qùsflk
+
+    fsdmlk sdmlkf qsdfmlùk qmsldkf qùlfk qsùdlkf qùsflk fsdmlk sdmlkf qsdfmlùk qmsldkf qùlfk qsùdlkf qùsflk
+    fsdmlk sdmlkf qsdfmlùk qmsldkf qùlfk qsùdlkf qùsflk fsdmlk sdmlkf qsdfmlùk qmsldkf qùlfk qsùdlkf qùsflk
+    fsdmlk sdmlkf qsdfmlùk qmsldkf qùlfk qsùdlkf qùsflk fsdmlk sdmlkf qsdfmlùk qmsldkf qùlfk qsùdlkf qùsflk
+
+    fsdmlk sdmlkf qsdfmlùk qmsldkf qùlfk qsùdlkf qùsflk fsdmlk sdmlkf qsdfmlùk qmsldkf qùlfk qsùdlkf qùsflk
+    fsdmlk sdmlkf qsdfmlùk qmsldkf qùlfk qsùdlkf qùsflk fsdmlk sdmlkf qsdfmlùk qmsldkf qùlfk qsùdlkf qùsflk
+    fsdmlk sdmlkf qsdfmlùk qmsldkf qùlfk qsùdlkf qùsflk fsdmlk sdmlkf qsdfmlùk qmsldkf qùlfk qsùdlkf qùsflk
+    fsdmlk sdmlkf qsdfmlùk qmsldkf qùlfk qsùdlkf qùsflk fsdmlk sdmlkf qsdfmlùk qmsldkf qùlfk qsùdlkf qùsflk
+</section>
+
 <footer>design with HTML5 | CSS3 | javascript</footer>
+
 </body>
 
 </html>
