add: first slide effect

--- a/template.html
+++ b/template.html
@@ -4,15 +4,16 @@
     <meta charset="utf-8"/>
     <title>template HTML5</title>
     <link rel="stylesheet" media="screen" href="template.css" />
+    <link rel="stylesheet" media="screen" href="slide.css" />
 </head>
 
 <body>
     <nav>
         <ul>
-            <li>Expériences</li>
-            <li>Compétences</li>
-            <li>Formations</li>
-            <li>Portfolio</li>
+            <li><a href="#article1">Expériences</a></li>
+            <li><a href="#article2">Compétences</a></li>
+            <li><a href="#article3">Formations</a></li>
+            <li><a href="#article4">Portfolio</a></li>
         </ul>
     </nav>
 
@@ -26,28 +27,45 @@
         </ul>
     </div>
 </section>
-
 <section id="main">
-    fsdmlk sdmlkf qsdfmlùk qmsldkf qùlfk qsùdlkf qùsflk fsdmlk sdmlkf qsdfmlùk qmsldkf qùlfk qsùdlkf qùsflk
-    fsdmlk sdmlkf qsdfmlùk qmsldkf qùlfk qsùdlkf qùsflk fsdmlk sdmlkf qsdfmlùk qmsldkf qùlfk qsùdlkf qùsflk
-    fsdmlk sdmlkf qsdfmlùk qmsldkf qùlfk qsùdlkf qùsflk fsdmlk sdmlkf qsdfmlùk qmsldkf qùlfk qsùdlkf qùsflk
-    fsdmlk sdmlkf qsdfmlùk qmsldkf qùlfk qsùdlkf qùsflk fsdmlk sdmlkf qsdfmlùk qmsldkf qùlfk qsùdlkf qùsflk
-    fsdmlk sdmlkf qsdfmlùk qmsldkf qùlfk qsùdlkf qùsflk fsdmlk sdmlkf qsdfmlùk qmsldkf qùlfk qsùdlkf qùsflk
-    fsdmlk sdmlkf qsdfmlùk qmsldkf qùlfk qsùdlkf qùsflk fsdmlk sdmlkf qsdfmlùk qmsldkf qùlfk qsùdlkf qùsflk
-    fsdmlk sdmlkf qsdfmlùk qmsldkf qùlfk qsùdlkf qùsflk fsdmlk sdmlkf qsdfmlùk qmsldkf qùlfk qsùdlkf qùsflk
-    fsdmlk sdmlkf qsdfmlùk qmsldkf qùlfk qsùdlkf qùsflk fsdmlk sdmlkf qsdfmlùk qmsldkf qùlfk qsùdlkf qùsflk
-    fsdmlk sdmlkf qsdfmlùk qmsldkf qùlfk qsùdlkf qùsflk fsdmlk sdmlkf qsdfmlùk qmsldkf qùlfk qsùdlkf qùsflk
-    fsdmlk sdmlkf qsdfmlùk qmsldkf qùlfk qsùdlkf qùsflk fsdmlk sdmlkf qsdfmlùk qmsldkf qùlfk qsùdlkf qùsflk
-    fsdmlk sdmlkf qsdfmlùk qmsldkf qùlfk qsùdlkf qùsflk fsdmlk sdmlkf qsdfmlùk qmsldkf qùlfk qsùdlkf qùsflk
 
-    fsdmlk sdmlkf qsdfmlùk qmsldkf qùlfk qsùdlkf qùsflk fsdmlk sdmlkf qsdfmlùk qmsldkf qùlfk qsùdlkf qùsflk
-    fsdmlk sdmlkf qsdfmlùk qmsldkf qùlfk qsùdlkf qùsflk fsdmlk sdmlkf qsdfmlùk qmsldkf qùlfk qsùdlkf qùsflk
-    fsdmlk sdmlkf qsdfmlùk qmsldkf qùlfk qsùdlkf qùsflk fsdmlk sdmlkf qsdfmlùk qmsldkf qùlfk qsùdlkf qùsflk
+    <div class="wrapper">
+        <div id="article1">
+            <div id="article2">
+                <div id="article3">
+                    <div id="article4">
+                        <div class="sliderContainer">
+                            <div class="content">
+                                <div class="item">
+                                    <h2>Expérience</h2>
+                                    ksdjfm kfsjdmlk fsldkj fmlsdkuzei foiflsmkj vmlkjsdqflmkj fsdmlkj1
+                                    ksdjfm kfsjdmlk fsldkj fmlsdkuzei foiflsmkj vmlkjsdqflmkj fsdmlkj1
+                                    ksdjfm kfsjdmlk fsldkj fmlsdkuzei foiflsmkj vmlkjsdqflmkj fsdmlkj1
+                                    ksdjfm kfsjdmlk fsldkj fmlsdkuzei foiflsmkj vmlkjsdqflmkj fsdmlkj1
+                                    ksdjfm kfsjdmlk fsldkj fmlsdkuzei foiflsmkj vmlkjsdqflmkj fsdmlkj1
+                                    ksdjfm kfsjdmlk fsldkj fmlsdkuzei foiflsmkj vmlkjsdqflmkj fsdmlkj1
+                                    ksdjfm kfsjdmlk fsldkj fmlsdkuzei foiflsmkj vmlkjsdqflmkj fsdmlkj1
+                                </div>
+                                <div class="item">
+                                    <h2>Compétences</h2>
+                                    ksdjfm kfsjdmlk fsldkj fmlsdkuzei foiflsmkj vmlkjsdqflmkj fsdmlkj1
+                                </div>
+                                <div class="item">
+                                    <h2>Formations</h2>
+                                    ksdjfm kfsjdmlk fsldkj fmlsdkuzei foiflsmkj vmlkjsdqflmkj fsdmlkj1
+                                </div>
+                                <div class="item">
+                                    <h2>Portfolio</h2>
+                                    ksdjfm kfsjdmlk fsldkj fmlsdkuzei foiflsmkj vmlkjsdqflmkj fsdmlkj1
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
-    fsdmlk sdmlkf qsdfmlùk qmsldkf qùlfk qsùdlkf qùsflk fsdmlk sdmlkf qsdfmlùk qmsldkf qùlfk qsùdlkf qùsflk
-    fsdmlk sdmlkf qsdfmlùk qmsldkf qùlfk qsùdlkf qùsflk fsdmlk sdmlkf qsdfmlùk qmsldkf qùlfk qsùdlkf qùsflk
-    fsdmlk sdmlkf qsdfmlùk qmsldkf qùlfk qsùdlkf qùsflk fsdmlk sdmlkf qsdfmlùk qmsldkf qùlfk qsùdlkf qùsflk
-    fsdmlk sdmlkf qsdfmlùk qmsldkf qùlfk qsùdlkf qùsflk fsdmlk sdmlkf qsdfmlùk qmsldkf qùlfk qsùdlkf qùsflk
 </section>
 
 <footer>design with HTML5 | CSS3 | javascript</footer>
