add: some design stuff

--- a/template.html
+++ b/template.html
@@ -10,6 +10,7 @@
 <body>
     <nav>
         <ul>
+            <li><a href="">Profession de foi</a></li>
             <li><a href="#article1">Expériences</a></li>
             <li><a href="#article2">Compétences</a></li>
             <li><a href="#article3">Formations</a></li>
