add: xp chart in idex page

--- a/template.html
+++ b/template.html
@@ -5,6 +5,7 @@
     <title>template HTML5</title>
     <link rel="stylesheet" media="screen" href="template.css" />
     <link rel="stylesheet" media="screen" href="slide.css" />
+    <link rel="stylesheet" media="screen" href="xp.css" />
 </head>
 
 <body>
@@ -38,14 +39,7 @@
                         <div class="sliderContainer">
                             <div class="content">
                                 <div class="item">
-                                    <h2>Expérience</h2>
-                                    ksdjfm kfsjdmlk fsldkj fmlsdkuzei foiflsmkj vmlkjsdqflmkj fsdmlkj1
-                                    ksdjfm kfsjdmlk fsldkj fmlsdkuzei foiflsmkj vmlkjsdqflmkj fsdmlkj1
-                                    ksdjfm kfsjdmlk fsldkj fmlsdkuzei foiflsmkj vmlkjsdqflmkj fsdmlkj1
-                                    ksdjfm kfsjdmlk fsldkj fmlsdkuzei foiflsmkj vmlkjsdqflmkj fsdmlkj1
-                                    ksdjfm kfsjdmlk fsldkj fmlsdkuzei foiflsmkj vmlkjsdqflmkj fsdmlkj1
-                                    ksdjfm kfsjdmlk fsldkj fmlsdkuzei foiflsmkj vmlkjsdqflmkj fsdmlkj1
-                                    ksdjfm kfsjdmlk fsldkj fmlsdkuzei foiflsmkj vmlkjsdqflmkj fsdmlkj1
+                                    <div id="timeline"></div>
                                 </div>
                                 <div class="item">
                                     <h2>Compétences</h2>
@@ -71,6 +65,9 @@
 
 <footer>design with HTML5 | CSS3 | javascript</footer>
 
+<script src="lib/jquery-1.7.1.min.js" type="text/javascript"></script>
+<script src="lib/highcharts.js" type="text/javascript"></script>
+<script src="js/xpChart.js" type="text/javascript"></script>
 </body>
 
 </html>
