--- a/xp.html
+++ b/xp.html
@@ -4,13 +4,11 @@
 <head>
     <meta charset="utf-8"/>
     <title>template HTML5</title>
-    <link rel="stylesheet" media="screen" href="template.css" />
-    <link rel="stylesheet" media="screen" href="slide.css" />
 </head>
 
 <body>
 
-<div id="timeline">
+<div id="timeline" style="width: 1000px;">
 
 </div>
 
